# Fixed-Trigonometry

./: Cargo.toml  README.md  RELEASES.md
src/: atan.rs  complex.rs  fft.rs  lib.rs  sqrt.rs
tests/: atan_comparison.rs  cos_comparison.rs  sin_comparison.rs  sqrt_comparison.rs
