[package]
name = "fixed_trigonometry"
version = "0.2.4"
edition = "2018"
authors = ["Erik Buer"]
description = "Fixed point numerical approimations to trigonometric functions."
readme = "README.md"
repository = "https://github.com/ErikBuer/Fixed-Trigonometry"
license-file = "LICENSE"
keywords = ["dsp", "no_std"]

[lib]
name  = "fixed_trigonometry"
path  = "src/lib.rs"
bench = false
doc   = true
test  = true
edition    = "2018"
crate-type = ["lib"]


[dependencies]
fixed = "1.10.0"

[dependencies.num]
version = "0.4"
default-features = false
