[package]
name = "fixed_trigonometry"
version = "0.2.7"
edition = "2018"
authors = ["Erik Buer"]
description = "Fixed point numerical approimations to trigonometric functions."
readme = "README.md"
repository = "https://github.com/ErikBuer/Fixed-Trigonometry"
license-file = "LICENSE"
keywords = ["dsp", "no_std"]
exclude = ["figures/"]

[lib]
name  = "fixed_trigonometry"
path  = "src/lib.rs"
bench = false
doc   = true
test  = true
edition    = "2018"
crate-type = ["lib"]


[dependencies]
fixed = "1.10.0"

[dev-dependencies]
plotters = "^0.3.1"
cordic   = "0.1.5"

[dependencies.num]
version = "0.4"
default-features = false
