[package]
name = "fixed_trigonometry"
version = "0.4.0"
edition = "2021"
authors = ["Erik Buer"]
description = "Fixed point numerical approimations to trigonometric functions."
readme = "README.md"
repository = "https://github.com/ErikBuer/Fixed-Trigonometry"
license-file = "LICENSE"
keywords = ["dsp", "no_std"]
exclude = ["figures/"]

[lib]
path  = "src/lib.rs"
bench = false
doc   = true
test  = true
crate-type = ["lib"]


[dependencies]
fixed     = "1.10.0"
cordic    = "0.1.5"
mixed-num = "^0.1.4"

[dev-dependencies]
plotters = "^0.3.1"

[dependencies.num]
version = "0.4"
default-features = false
